--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
     {"Manufacturer": "Marvel","Series": "Daredevil","Issue Number": 181,"Year": 1982,"Grade": "","Quantity": 1,"Value": "$85","Total Value": "$85"},
     {"Manufacturer": "DC","Series": "World's Finest","Issue Number": 240,"Year": 1976,"Grade": "","Quantity": 1,"Value": "$35","Total Value": "$35"},
     {"Manufacturer": "DC","Series": "World's Finest","Issue Number": 238,"Year": 1976,"Grade": "","Quantity": 1,"Value": "$38","Total Value": "$38"},
-    {"Manufacturer": "DC","Series": "The New Teen Titans","Issue Number": 15,"Year": 1982,"Grade": "","Quantity": 83,"Value": "$40","Total Value": "$3,320"},
+    {"Manufacturer": "DC","Series": "The New Teen Titans","Issue Number": 16,"Year": 1982,"Grade": "","Quantity": 117,"Value": "$40","Total Value": "$4,680"},
     {"Manufacturer": "Marvel","Series": "The Uncanny X-Men","Issue Number": 155,"Year": 1982,"Grade": "","Quantity": 4,"Value": "$44","Total Value": "$176"},
-    {"Manufacturer": "","Series": "","Issue Number": 0,"Year": 0,"Grade": "","Quantity": 0,"Value": "","Total Value": "$0"},
     {"Manufacturer": "DC","Series": "Action Comics","Issue Number": 463,"Year": 1976,"Grade": "","Quantity": 1,"Value": "$109","Total Value": "$109"},
     {"Manufacturer": "DC","Series": "Action Comics","Issue Number": 465,"Year": 1976,"Grade": "","Quantity": 1,"Value": "$270","Total Value": "$270"},
     {"Manufacturer": "DC","Series": "Action Comics","Issue Number": 471,"Year": 1976,"Grade": "","Quantity": 1,"Value": "$270","Total Value": "$270"},
@@ -158,7 +157,7 @@
     {"Manufacturer": "Marvel","Series": "What If?","Issue Number": 34,"Year": 1982,"Grade": "","Quantity": 1,"Value": "$750","Total Value": "$750"},
     {"Manufacturer": "Marvel","Series": "What If Wolverine was an Agent of SHIELD","Issue Number": 7,"Year": 1989,"Grade": "","Quantity": 1,"Value": "$150","Total Value": "$150"},
     {"Manufacturer": "DC","Series": "Batman","Issue Number": 220,"Year": 1970,"Grade": "","Quantity": 1,"Value": "$2,000","Total Value": "$2,000"},
-    {"Manufacturer": "Marvel","Series": "The Savage She Hulk","Issue Number": 7,"Year": 1980,"Grade": "","Quantity": 1,"Value": "$120","Total Value": "$120"},
+    {"Manufacturer": "Marvel","Series": "The Savage She Hulk","Issue Number": 7,"Year": 1980,"Grade": "","Quantity": 2,"Value": "$120","Total Value": "$240"},
     {"Manufacturer": "Marvel","Series": "The Defenders","Issue Number": 68,"Year": 1979,"Grade": "","Quantity": 1,"Value": "$80","Total Value": "$80"},
     {"Manufacturer": "DC","Series": "Action Comics","Issue Number": 311,"Year": 1964,"Grade": "","Quantity": 1,"Value": "$1,000","Total Value": "$1,000"},
     {"Manufacturer": "Gold Key","Series": "Space Family Robinson","Issue Number": 20,"Year": 1962,"Grade": "","Quantity": 1,"Value": "$300","Total Value": "$300"},
@@ -307,7 +306,27 @@
     {"Manufacturer": "DC","Series": "The Flash","Issue Number": 316,"Year": 1982,"Grade": "","Quantity": 1,"Value": "$80","Total Value": "$80"},
     {"Manufacturer": "DC","Series": "Superman","Issue Number": 232,"Year": 1970,"Grade": "","Quantity": 1,"Value": "$1,200","Total Value": "$1,200"},
     {"Manufacturer": "DC","Series": "DC Comics Presents","Issue Number": 26,"Year": 1980,"Grade": "","Quantity": 1,"Value": "$800","Total Value": "$800"},
-    {"Manufacturer": "First Comics","Series": "Jon Sable Freelance","Issue Number": 7,"Year": 1983,"Grade": "","Quantity": 1,"Value": "$30","Total Value": "$30"}
+    {"Manufacturer": "First Comics","Series": "Jon Sable Freelance","Issue Number": 7,"Year": 1983,"Grade": "","Quantity": 1,"Value": "$30","Total Value": "$30"},
+    {"Manufacturer": "Marvel","Series": "The Savage She Hulk","Issue Number": 3,"Year": 1980,"Grade": "","Quantity": 1,"Value": "$100","Total Value": "$100"},
+    {"Manufacturer": "Marvel","Series": "Uncanny X-men","Issue Number": 155,"Year": 1982,"Grade": "","Quantity": 32,"Value": "$170","Total Value": "$5,440"},
+    {"Manufacturer": "Charleston Comics","Series": "Doomsday +1","Issue Number": 1,"Year": 1975,"Grade": "","Quantity": 1,"Value": "$450","Total Value": "$450"},
+    {"Manufacturer": "DC","Series": "World's Finest","Issue Number": 198,"Year": 1970,"Grade": "","Quantity": 1,"Value": "$8,000","Total Value": "$8,000"},
+    {"Manufacturer": "DC","Series": "The Flash","Issue Number": 320,"Year": 1983,"Grade": "","Quantity": 1,"Value": "$80","Total Value": "$80"},
+    {"Manufacturer": "DC","Series": "The Fury of Firestorm","Issue Number": 11,"Year": 1983,"Grade": "","Quantity": 1,"Value": "$10","Total Value": "$10"},
+    {"Manufacturer": "DC","Series": "Superman","Issue Number": 190,"Year": 1966,"Grade": "","Quantity": 1,"Value": "$1,300","Total Value": "$1,300"},
+    {"Manufacturer": "Marvel","Series": "The Mighty THOR","Issue Number": 300,"Year": 1980,"Grade": "","Quantity": 1,"Value": "$150","Total Value": "$150"},
+    {"Manufacturer": "DC","Series": "The New Adventures of Superboy","Issue Number": 39,"Year": 1980,"Grade": "","Quantity": 1,"Value": "$10","Total Value": "$10"},
+    {"Manufacturer": "DC","Series": "Superman","Issue Number": 179,"Year": 1965,"Grade": "","Quantity": 1,"Value": "$325","Total Value": "$325"},
+    {"Manufacturer": "Marvel","Series": "The Uncanny X-Men","Issue Number": 169,"Year": 1983,"Grade": "","Quantity": 1,"Value": "$150","Total Value": "$150"},
+    {"Manufacturer": "Marvel","Series": "The Uncanny X-Men","Issue Number": 180,"Year": 1984,"Grade": "","Quantity": 1,"Value": "$127","Total Value": "$127"},
+    {"Manufacturer": "PC","Series": "Twisted Tales","Issue Number": 1,"Year": 1982,"Grade": "","Quantity": 1,"Value": "$100","Total Value": "$100"},
+    {"Manufacturer": "PC","Series": "Twisted Tales","Issue Number": 7,"Year": 1982,"Grade": "","Quantity": 1,"Value": "$110","Total Value": "$110"},
+    {"Manufacturer": "DC","Series": "Superboy Spectacular","Issue Number": 1,"Year": 1979,"Grade": "","Quantity": 1,"Value": "$110","Total Value": "$110"},
+    {"Manufacturer": "PC","Series": "Twisted Tales","Issue Number": 4,"Year": 1982,"Grade": "","Quantity": 1,"Value": "$100","Total Value": "$100"},
+    {"Manufacturer": "PC","Series": "Twisted Tales","Issue Number": 6,"Year": 1982,"Grade": "","Quantity": 1,"Value": "$100","Total Value": "$100"},
+    {"Manufacturer": "DC","Series": "Batman vs Predator","Issue Number": 1,"Year": 1991,"Grade": "","Quantity": 1,"Value": "$75","Total Value": "$75"},
+    {"Manufacturer": "DC","Series": "Batman vs Predator","Issue Number": 2,"Year": 1991,"Grade": "","Quantity": 1,"Value": "$65","Total Value": "$65"},
+    {"Manufacturer": "DC","Series": "Batman vs Predator","Issue Number": 3,"Year": 1992,"Grade": "","Quantity": 1,"Value": "$48","Total Value": "$48"}
         ];
 
         let tbody = document.querySelector("tbody");
